--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cached_network_image: ^3.2.0
   dio: ^4.0.6
   flutter_native_splash: ^2.1.6
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
