--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   dio: ^4.0.6
   flutter_native_splash: ^2.1.6
   image_picker: ^0.8.5+3
+  flutter_slidable: ^1.3.0
 
 dev_dependencies:
   flutter_test:
