--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   dio: ^4.0.6
   flutter_native_splash: ^2.1.6
   image_picker: ^0.8.5+3
+  flutter_dotenv: ^5.0.2
+  firebase_auth: ^3.3.19
 
 dev_dependencies:
   flutter_test:
@@ -72,7 +74,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
+    - assets/
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
