--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   image_picker: ^0.8.5+3
   flutter_dotenv: ^5.0.2
   firebase_auth: ^3.3.19
+  json_annotation: ^4.0.1
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +55,8 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   flutter_launcher_icons: '^0.9.2'
   mockito: ^5.1.0
+  json_serializable: ^6.2.0
+  build_runner: ^2.1.11
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
